@@ -1,4 +1,8 @@
 Changes in version 0.2.0.19-alpha - 2008-0?-??
+  o Minor bugfixes:
+    - Directory caches now fetch certificates from all authorities
+      listed in a networkstatus consensus, even when they do not
+      recognize them.  Fixes bug 571.  Bugfix on 0.2.0.x.
 
 
 Changes in version 0.2.0.18-alpha - 2008-01-25
